# go-ethereum

./: .travis.yml  BUILD.bazel  CHANGELOG.md  Dockerfile  Dockerfile.dm  Dockerfile.fh  README.dfuse.md  README.fh.md  README.md  README.sf.md  SECURITY.md  go.mod  go.sum  interfaces.go  oss-fuzz.sh
accounts/: BUILD.bazel  accounts.go  accounts_test.go  manager.go
accounts/abi/: BUILD.bazel  abi.go  abi_test.go  error.go  event.go  event_test.go  method.go  pack.go  pack_test.go  packing_test.go  topics.go  topics_test.go  type.go  type_test.go  unpack.go  unpack_test.go
accounts/keystore/: BUILD.bazel  account_cache.go  account_cache_test.go  file_cache.go  key.go  keystore.go  keystore_test.go  passphrase.go  passphrase_test.go  plain.go  plain_test.go  presale.go  wallet.go  watch.go
accounts/scwallet/: BUILD.bazel  hub.go  securechannel.go  wallet.go
accounts/usbwallet/: BUILD.bazel  hub.go  ledger.go  trezor.go  wallet.go
arbcrypto/: BUILD.bazel  ecrecovery_nocgo.go  ecrecovery_wasm.go  keccak.go  keccak_wasm.go
arbitrum/: BUILD.bazel  apibackend.go  apis.go  arbos_interface.go  archivefallbackclients.go  archivefallbackclients_test.go  backend.go  bloom.go  conditionaltx.go  config.go  eager_preimage_store.go  eager_preimage_store_test.go  export.go  handler_p2p.go  header.go  receipt.go  recording_node_reader.go  recording_node_reader_test.go  recording_state_database.go  recordingdb.go  recreatestate.go  sync_test.go
arbitrum/filter/: BUILD.bazel  filter_report.go
arbitrum/multigas/: BUILD.bazel  collector.go  collector_test.go  constraint.go  constraint_test.go  doc.go  resourcekind_string.go  (+2 more)
arbitrum_types/: BUILD.bazel  txoptions.go
common/: BUILD.bazel  bytes.go  debug.go  types.go  types_arbitrum.go  types_test.go
consensus/: BUILD.bazel  consensus.go  merger.go
console/: BUILD.bazel  bridge.go  bridge_test.go  console.go  console_test.go
core/: BUILD.bazel  CLAUDE.md  arbitrum_hooks.go  bench_test.go  bintrie_witness_test.go  block_validator.go  block_validator_test.go  blockchain.go  blockchain_arbitrum.go  blockchain_arbitrum_test.go  blockchain_insert.go  blockchain_reader.go  blockchain_repair_test.go  blockchain_sethead_test.go  blockchain_snapshot_test.go  blockchain_test.go  blocks.go  bloom_indexer.go  chain_indexer.go  chain_indexer_test.go  chain_makers.go  chain_makers_test.go  dao_test.go  error.go  events.go  evm.go  forkchoice.go  gen_genesis.go  gen_genesis_account.go  genesis.go  genesis_test.go  hardcoded_tx_gas.go  headerchain.go  headerchain_test.go  mkalloc.go  reverted_tx_gas.go  rlp_test.go  sender_cacher.go  state_prefetcher.go  state_processor.go  (+15 more)
crypto/: BUILD.bazel  crypto.go  crypto_test.go  ecrecover_nocgo.go  ecrecover_nocgo_sp1.go  keccak.go  keccak_sp1.go  keccak_state.go  keccak_state_wasm.go  keccak_wasm.go  keccak_ziren.go  signature_cgo.go  signature_nocgo.go  signature_test.go
eth/: BUILD.bazel  api.go  api_admin.go  api_backend.go  api_backend_test.go  api_debug.go  api_debug_test.go  api_miner.go  api_test.go  api_tracer.go  backend.go  backend_arbitrum.go  bloombits.go  handler.go  handler_eth.go  handler_eth_test.go  handler_snap.go  handler_test.go  peer.go  peerset.go  state_accessor.go  sync.go  sync_test.go
ethclient/: BUILD.bazel  ethclient.go  ethclient_test.go  example_test.go  signer.go  types_test.go
ethstats/: BUILD.bazel  ethstats.go
event/: BUILD.bazel  example_feed_test.go  example_scope_test.go  example_subscription_test.go  subscription.go
graphql/: BUILD.bazel  graphiql.go  graphql.go  graphql_test.go  service.go
log/: BUILD.bazel  format.go  logger_arbitrum.go
metrics/: BUILD.bazel  chunked_associative_array.go  cpu_disabled.go  cpu_enabled.go  cputime_nop.go  cputime_unix.go  metrics.go  sample.go  sample_test.go  sliding_time_window_array_sample.go  sliding_time_window_expiry_test.go
miner/: BUILD.bazel  miner.go  miner_test.go  ordering.go  ordering_test.go  payload_building.go  payload_building_test.go  pending.go  unconfirmed.go  unconfirmed_test.go  worker.go  worker_test.go
node/: BUILD.bazel  api.go  api_test.go  config.go  config_test.go  database.go  defaults.go  endpoints.go  jwt_auth.go  node.go  node_auth_test.go  node_example_test.go  node_test.go  rpcstack.go  rpcstack_test.go  utils_test.go
p2p/: BUILD.bazel  config.go  config_toml.go  dial.go  dial_test.go  message.go  metrics.go  peer.go  peer_test.go  protocol.go  server.go  server_nat.go  server_nat_test.go  server_test.go  transport.go  transport_test.go  util.go  util_test.go
params/: BUILD.bazel  bootnodes.go  config.go  config_arbitrum.go  config_test.go  dao.go  protocol_params.go  version.go
rlp/: BUILD.bazel  decode.go  decode_test.go  encbuffer_example_test.go  encode.go  encode_test.go  encoder_example_test.go  iterator_test.go  safe.go  typecache.go  unsafe.go
rpc/: BUILD.bazel  client.go  client_arbitrum.go  client_example_test.go  client_opt_test.go  client_test.go  doc.go  endpoints.go  errors.go  handler.go  ipc.go  ipc_unix.go  ipc_wasm.go  json.go  metrics.go  server.go  server_test.go  service.go  subscription_test.go  types.go  types_test.go  websocket.go  websocket_test.go
tests/: BUILD.bazel  block_test.go  block_test_util.go  difficulty_test.go  difficulty_test_util.go  gen_btheader.go  gen_difficultytest.go  gen_stauthorization.go  gen_stenv.go  gen_sttransaction.go  init.go  init_test.go  kzg_bench_test.go  kzg_test.go  rlp_test_util.go  state_test.go  state_test_util.go  transaction_test.go  transaction_test_util.go  vm_test_util.go
trie/: BUILD.bazel  committer.go  database.go  database_test.go  database_wrap.go  encoding.go  errors.go  hasher.go  inspect.go  iterator.go  iterator_test.go  node.go  node_enc.go  node_test.go  preimages.go  proof.go  proof_test.go  secure_trie.go  secure_trie_test.go  stacktrie.go  stacktrie_fuzzer_test.go  stacktrie_test.go  sync.go  sync_test.go  tracer.go  tracer_test.go  trie.go  trie_id.go  trie_reader.go  trie_test.go  util_test.go  verkle.go  verkle_test.go
triedb/: BUILD.bazel  database.go  preimages.go  states.go
(+1258 files in other folders)
