load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "accounts",
    srcs = [
        "accounts.go",
        "errors.go",
        "hd.go",
        "manager.go",
        "sort.go",
        "url.go",
    ],
    importpath = "github.com/ethereum/go-ethereum/accounts",
    visibility = ["//visibility:public"],
    deps = [
        "//go-ethereum",
        "//go-ethereum/arbcrypto",
        "//go-ethereum/common",
        "//go-ethereum/core/types",
        "//go-ethereum/event",
    ],
)

go_test(
    name = "accounts_test",
    srcs = [
        "accounts_test.go",
        "hd_test.go",
        "url_test.go",
    ],
    embed = [":accounts"],
    deps = ["//go-ethereum/common/hexutil"],
)
