load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "arbitrum",
    srcs = [
        "apibackend.go",
        "arbos_interface.go",
        "archivefallbackclients.go",
        "backend.go",
        "conditionaltx.go",
        "config.go",
        "export.go",
        "net.go",
        "recordingdb.go",
        "recreatestate.go",
        "txpool.go",
    ],
    importpath = "github.com/ethereum/go-ethereum/arbitrum",
    visibility = ["//visibility:public"],
    deps = [
        "//go-ethereum",
        "//go-ethereum/accounts",
        "//go-ethereum/arbitrum_types",
        "//go-ethereum/common",
        "//go-ethereum/common/hexutil",
        "//go-ethereum/consensus",
        "//go-ethereum/consensus/misc/eip4844",
        "//go-ethereum/core",
        "//go-ethereum/core/filtermaps",
        "//go-ethereum/core/history",
        "//go-ethereum/core/rawdb",
        "//go-ethereum/core/state",
        "//go-ethereum/core/state/snapshot",
        "//go-ethereum/core/types",
        "//go-ethereum/core/vm",
        "//go-ethereum/crypto",
        "//go-ethereum/eth",
        "//go-ethereum/eth/ethconfig",
        "//go-ethereum/eth/filters",
        "//go-ethereum/eth/tracers",
        "//go-ethereum/ethdb",
        "//go-ethereum/event",
        "//go-ethereum/internal/ethapi",
        "//go-ethereum/internal/ethapi/override",
        "//go-ethereum/internal/shutdowncheck",
        "//go-ethereum/log",
        "//go-ethereum/metrics",
        "//go-ethereum/node",
        "//go-ethereum/params",
        "//go-ethereum/rlp",
        "//go-ethereum/rpc",
        "//go-ethereum/triedb",
        "//go-ethereum/triedb/hashdb",
        "@com_github_pkg_errors//:errors",
        "@com_github_spf13_pflag//:pflag",
    ],
)
