load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "core",
    srcs = [
        "arbitrum_hooks.go",
        "block_validator.go",
        "blockchain.go",
        "blockchain_arbitrum.go",
        "blockchain_insert.go",
        "blockchain_reader.go",
        "chain_makers.go",
        "error.go",
        "events.go",
        "evm.go",
        "gaspool.go",
        "gen_genesis.go",
        "genesis.go",
        "genesis_alloc.go",
        "headerchain.go",
        "reverted_tx_gas.go",
        "sender_cacher.go",
        "state_prefetcher.go",
        "state_processor.go",
        "state_transition.go",
        "stateless.go",
        "txindexer.go",
        "types.go",
    ],
    importpath = "github.com/ethereum/go-ethereum/core",
    visibility = ["//visibility:public"],
    deps = [
        "//go-ethereum/arbitrum/multigas",
        "//go-ethereum/common",
        "//go-ethereum/common/hexutil",
        "//go-ethereum/common/lru",
        "//go-ethereum/common/math",
        "//go-ethereum/common/mclock",
        "//go-ethereum/common/prque",
        "//go-ethereum/consensus",
        "//go-ethereum/consensus/beacon",
        "//go-ethereum/consensus/ethash",
        "//go-ethereum/consensus/misc",
        "//go-ethereum/consensus/misc/eip1559",
        "//go-ethereum/consensus/misc/eip4844",
        "//go-ethereum/core/history",
        "//go-ethereum/core/rawdb",
        "//go-ethereum/core/state",
        "//go-ethereum/core/state/snapshot",
        "//go-ethereum/core/stateless",
        "//go-ethereum/core/tracing",
        "//go-ethereum/core/types",
        "//go-ethereum/core/vm",
        "//go-ethereum/crypto",
        "//go-ethereum/crypto/kzg4844",
        "//go-ethereum/ethdb",
        "//go-ethereum/event",
        "//go-ethereum/internal/syncx",
        "//go-ethereum/internal/version",
        "//go-ethereum/log",
        "//go-ethereum/metrics",
        "//go-ethereum/params",
        "//go-ethereum/rlp",
        "//go-ethereum/rpc",
        "//go-ethereum/trie",
        "//go-ethereum/triedb",
        "//go-ethereum/triedb/hashdb",
        "//go-ethereum/triedb/pathdb",
        "@com_github_ethereum_go_verkle//:go-verkle",
        "@com_github_holiman_uint256//:uint256",
        "@org_golang_x_sync//errgroup",
    ],
)

go_test(
    name = "core_test",
    srcs = [
        "bench_test.go",
        "block_validator_test.go",
        "blockchain_repair_test.go",
        "blockchain_sethead_test.go",
        "blockchain_snapshot_test.go",
        "blockchain_test.go",
        "chain_makers_test.go",
        "dao_test.go",
        "genesis_test.go",
        "headerchain_test.go",
        "rlp_test.go",
        "state_processor_test.go",
        "state_transition_test.go",
        "txindexer_test.go",
        "verkle_witness_test.go",
    ],
    embed = [":core"],
    deps = [
        "//go-ethereum/arbcrypto",
        "//go-ethereum/arbitrum/multigas",
        "//go-ethereum/common",
        "//go-ethereum/common/math",
        "//go-ethereum/consensus",
        "//go-ethereum/consensus/beacon",
        "//go-ethereum/consensus/clique",
        "//go-ethereum/consensus/ethash",
        "//go-ethereum/consensus/misc/eip1559",
        "//go-ethereum/consensus/misc/eip4844",
        "//go-ethereum/core/history",
        "//go-ethereum/core/rawdb",
        "//go-ethereum/core/state",
        "//go-ethereum/core/tracing",
        "//go-ethereum/core/types",
        "//go-ethereum/core/vm",
        "//go-ethereum/core/vm/program",
        "//go-ethereum/crypto",
        "//go-ethereum/eth/tracers/logger",
        "//go-ethereum/ethdb",
        "//go-ethereum/ethdb/pebble",
        "//go-ethereum/params",
        "//go-ethereum/rlp",
        "//go-ethereum/trie",
        "//go-ethereum/trie/utils",
        "//go-ethereum/triedb",
        "//go-ethereum/triedb/hashdb",
        "//go-ethereum/triedb/pathdb",
        "@com_github_davecgh_go_spew//spew",
        "@com_github_ethereum_go_verkle//:go-verkle",
        "@com_github_holiman_uint256//:uint256",
        "@com_github_stretchr_testify//assert",
    ],
)
