load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "crypto",
    srcs = [
        "crypto.go",
        "keccak.go",
        "signature_cgo.go",
        "signature_nocgo.go",
    ],
    importpath = "github.com/ethereum/go-ethereum/crypto",
    visibility = ["//visibility:public"],
    deps = [
        "//go-ethereum/arbcrypto",
        "//go-ethereum/common",
        "//go-ethereum/common/math",
        "//go-ethereum/rlp",
    ] + select({
        "@rules_go//go/platform:386": [
            "//go-ethereum/crypto/secp256k1",
            "@com_github_decred_dcrd_dcrec_secp256k1_v4//:secp256k1",
            "@com_github_decred_dcrd_dcrec_secp256k1_v4//ecdsa",
        ],
        "@rules_go//go/platform:amd64": [
            "//go-ethereum/crypto/secp256k1",
            "@com_github_decred_dcrd_dcrec_secp256k1_v4//:secp256k1",
            "@com_github_decred_dcrd_dcrec_secp256k1_v4//ecdsa",
        ],
        "@rules_go//go/platform:arm": [
            "//go-ethereum/crypto/secp256k1",
            "@com_github_decred_dcrd_dcrec_secp256k1_v4//:secp256k1",
            "@com_github_decred_dcrd_dcrec_secp256k1_v4//ecdsa",
        ],
        "@rules_go//go/platform:arm64": [
            "//go-ethereum/crypto/secp256k1",
            "@com_github_decred_dcrd_dcrec_secp256k1_v4//:secp256k1",
            "@com_github_decred_dcrd_dcrec_secp256k1_v4//ecdsa",
        ],
        "@rules_go//go/platform:mips": [
            "//go-ethereum/crypto/secp256k1",
            "@com_github_decred_dcrd_dcrec_secp256k1_v4//:secp256k1",
            "@com_github_decred_dcrd_dcrec_secp256k1_v4//ecdsa",
        ],
        "@rules_go//go/platform:mips64": [
            "//go-ethereum/crypto/secp256k1",
            "@com_github_decred_dcrd_dcrec_secp256k1_v4//:secp256k1",
            "@com_github_decred_dcrd_dcrec_secp256k1_v4//ecdsa",
        ],
        "@rules_go//go/platform:mips64le": [
            "//go-ethereum/crypto/secp256k1",
            "@com_github_decred_dcrd_dcrec_secp256k1_v4//:secp256k1",
            "@com_github_decred_dcrd_dcrec_secp256k1_v4//ecdsa",
        ],
        "@rules_go//go/platform:mipsle": [
            "//go-ethereum/crypto/secp256k1",
            "@com_github_decred_dcrd_dcrec_secp256k1_v4//:secp256k1",
            "@com_github_decred_dcrd_dcrec_secp256k1_v4//ecdsa",
        ],
        "@rules_go//go/platform:ppc64": [
            "//go-ethereum/crypto/secp256k1",
            "@com_github_decred_dcrd_dcrec_secp256k1_v4//:secp256k1",
            "@com_github_decred_dcrd_dcrec_secp256k1_v4//ecdsa",
        ],
        "@rules_go//go/platform:ppc64le": [
            "//go-ethereum/crypto/secp256k1",
            "@com_github_decred_dcrd_dcrec_secp256k1_v4//:secp256k1",
            "@com_github_decred_dcrd_dcrec_secp256k1_v4//ecdsa",
        ],
        "@rules_go//go/platform:riscv64": [
            "//go-ethereum/crypto/secp256k1",
            "@com_github_decred_dcrd_dcrec_secp256k1_v4//:secp256k1",
            "@com_github_decred_dcrd_dcrec_secp256k1_v4//ecdsa",
        ],
        "@rules_go//go/platform:s390x": [
            "//go-ethereum/crypto/secp256k1",
            "@com_github_decred_dcrd_dcrec_secp256k1_v4//:secp256k1",
            "@com_github_decred_dcrd_dcrec_secp256k1_v4//ecdsa",
        ],
        "@rules_go//go/platform:wasm": [
            "@com_github_decred_dcrd_dcrec_secp256k1_v4//:secp256k1",
            "@com_github_decred_dcrd_dcrec_secp256k1_v4//ecdsa",
        ],
        "//conditions:default": [],
    }),
)

go_test(
    name = "crypto_test",
    srcs = [
        "crypto_test.go",
        "signature_test.go",
    ],
    embed = [":crypto"],
    deps = [
        "//go-ethereum/common",
        "//go-ethereum/common/hexutil",
        "//go-ethereum/common/math",
    ],
)
