load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "eth",
    srcs = [
        "api_admin.go",
        "api_backend.go",
        "api_debug.go",
        "api_miner.go",
        "backend.go",
        "backend_arbitrum.go",
        "dropper.go",
        "handler.go",
        "handler_eth.go",
        "handler_snap.go",
        "peer.go",
        "peerset.go",
        "state_accessor.go",
        "sync.go",
    ],
    importpath = "github.com/ethereum/go-ethereum/eth",
    visibility = ["//visibility:public"],
    deps = [
        "//go-ethereum",
        "//go-ethereum/accounts",
        "//go-ethereum/common",
        "//go-ethereum/common/hexutil",
        "//go-ethereum/common/mclock",
        "//go-ethereum/consensus",
        "//go-ethereum/consensus/misc/eip4844",
        "//go-ethereum/core",
        "//go-ethereum/core/filtermaps",
        "//go-ethereum/core/history",
        "//go-ethereum/core/rawdb",
        "//go-ethereum/core/state",
        "//go-ethereum/core/state/pruner",
        "//go-ethereum/core/stateless",
        "//go-ethereum/core/txpool",
        "//go-ethereum/core/txpool/blobpool",
        "//go-ethereum/core/txpool/legacypool",
        "//go-ethereum/core/txpool/locals",
        "//go-ethereum/core/types",
        "//go-ethereum/core/vm",
        "//go-ethereum/crypto",
        "//go-ethereum/eth/downloader",
        "//go-ethereum/eth/ethconfig",
        "//go-ethereum/eth/fetcher",
        "//go-ethereum/eth/gasprice",
        "//go-ethereum/eth/protocols/eth",
        "//go-ethereum/eth/protocols/snap",
        "//go-ethereum/eth/tracers",
        "//go-ethereum/ethdb",
        "//go-ethereum/event",
        "//go-ethereum/internal/ethapi",
        "//go-ethereum/internal/shutdowncheck",
        "//go-ethereum/internal/version",
        "//go-ethereum/log",
        "//go-ethereum/metrics",
        "//go-ethereum/miner",
        "//go-ethereum/node",
        "//go-ethereum/p2p",
        "//go-ethereum/p2p/dnsdisc",
        "//go-ethereum/p2p/enode",
        "//go-ethereum/params",
        "//go-ethereum/rlp",
        "//go-ethereum/rpc",
        "//go-ethereum/trie",
        "//go-ethereum/triedb",
        "//go-ethereum/version",
        "@com_github_dchest_siphash//:siphash",
    ],
)

go_test(
    name = "eth_test",
    srcs = [
        "api_backend_test.go",
        "api_debug_test.go",
        "handler_eth_test.go",
        "handler_test.go",
        "sync_test.go",
    ],
    embed = [":eth"],
    deps = [
        "//go-ethereum/common",
        "//go-ethereum/consensus/beacon",
        "//go-ethereum/consensus/ethash",
        "//go-ethereum/core",
        "//go-ethereum/core/rawdb",
        "//go-ethereum/core/state",
        "//go-ethereum/core/tracing",
        "//go-ethereum/core/txpool",
        "//go-ethereum/core/txpool/blobpool",
        "//go-ethereum/core/txpool/legacypool",
        "//go-ethereum/core/txpool/locals",
        "//go-ethereum/core/types",
        "//go-ethereum/crypto",
        "//go-ethereum/eth/ethconfig",
        "//go-ethereum/eth/protocols/eth",
        "//go-ethereum/eth/protocols/snap",
        "//go-ethereum/ethdb",
        "//go-ethereum/event",
        "//go-ethereum/p2p",
        "//go-ethereum/p2p/enode",
        "//go-ethereum/params",
        "//go-ethereum/rlp",
        "//go-ethereum/triedb",
        "@com_github_davecgh_go_spew//spew",
        "@com_github_holiman_uint256//:uint256",
        "@com_github_stretchr_testify//assert",
    ],
)
