load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "ethclient",
    srcs = [
        "ethclient.go",
        "gen_simulate_block_result.go",
        "gen_simulate_call_result.go",
        "signer.go",
    ],
    importpath = "github.com/ethereum/go-ethereum/ethclient",
    visibility = ["//visibility:public"],
    deps = [
        "//go-ethereum",
        "//go-ethereum/common",
        "//go-ethereum/common/hexutil",
        "//go-ethereum/core/types",
        "//go-ethereum/rpc",
    ],
)

go_test(
    name = "ethclient_test",
    srcs = [
        "ethclient_test.go",
        "example_test.go",
        "types_test.go",
    ],
    embed = [":ethclient"],
    deps = [
        "//go-ethereum",
        "//go-ethereum/accounts/abi",
        "//go-ethereum/common",
        "//go-ethereum/consensus/beacon",
        "//go-ethereum/consensus/ethash",
        "//go-ethereum/core",
        "//go-ethereum/core/types",
        "//go-ethereum/crypto",
        "//go-ethereum/eth",
        "//go-ethereum/eth/ethconfig",
        "//go-ethereum/node",
        "//go-ethereum/params",
        "//go-ethereum/rpc",
    ],
)
