load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "ethstats",
    srcs = ["ethstats.go"],
    importpath = "github.com/ethereum/go-ethereum/ethstats",
    visibility = ["//visibility:public"],
    deps = [
        "//go-ethereum",
        "//go-ethereum/common",
        "//go-ethereum/common/mclock",
        "//go-ethereum/consensus",
        "//go-ethereum/core",
        "//go-ethereum/core/types",
        "//go-ethereum/eth/protocols/eth",
        "//go-ethereum/event",
        "//go-ethereum/log",
        "//go-ethereum/node",
        "//go-ethereum/p2p",
        "//go-ethereum/rpc",
        "@com_github_gorilla_websocket//:websocket",
    ],
)

go_test(
    name = "ethstats_test",
    srcs = ["ethstats_test.go"],
    embed = [":ethstats"],
)
