load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "event",
    srcs = [
        "event.go",
        "feed.go",
        "feedof.go",
        "multisub.go",
        "subscription.go",
    ],
    importpath = "github.com/ethereum/go-ethereum/event",
    visibility = ["//visibility:public"],
    deps = ["//go-ethereum/common/mclock"],
)

go_test(
    name = "event_test",
    srcs = [
        "event_test.go",
        "example_feed_test.go",
        "example_scope_test.go",
        "example_subscription_test.go",
        "example_test.go",
        "feed_test.go",
        "feedof_test.go",
        "multisub_test.go",
        "subscription_test.go",
    ],
    embed = [":event"],
)
