load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "graphql",
    srcs = [
        "graphiql.go",
        "graphql.go",
        "schema.go",
        "service.go",
    ],
    importpath = "github.com/ethereum/go-ethereum/graphql",
    visibility = ["//visibility:public"],
    deps = [
        "//go-ethereum",
        "//go-ethereum/common",
        "//go-ethereum/common/hexutil",
        "//go-ethereum/consensus/misc/eip1559",
        "//go-ethereum/core",
        "//go-ethereum/core/state",
        "//go-ethereum/core/types",
        "//go-ethereum/eth/filters",
        "//go-ethereum/graphql/internal/graphiql",
        "//go-ethereum/internal/ethapi",
        "//go-ethereum/log",
        "//go-ethereum/node",
        "//go-ethereum/rlp",
        "//go-ethereum/rpc",
        "@com_github_ccoveille_go_safecast//:go-safecast",
        "@com_github_graph_gophers_graphql_go//:graphql-go",
        "@com_github_graph_gophers_graphql_go//errors",
    ],
)

go_test(
    name = "graphql_test",
    srcs = ["graphql_test.go"],
    embed = [":graphql"],
    deps = [
        "//go-ethereum/common",
        "//go-ethereum/consensus/beacon",
        "//go-ethereum/consensus/ethash",
        "//go-ethereum/core",
        "//go-ethereum/core/rawdb",
        "//go-ethereum/core/types",
        "//go-ethereum/core/vm",
        "//go-ethereum/crypto",
        "//go-ethereum/eth",
        "//go-ethereum/eth/ethconfig",
        "//go-ethereum/eth/filters",
        "//go-ethereum/node",
        "//go-ethereum/params",
        "@com_github_stretchr_testify//assert",
    ],
)
