load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "metrics",
    srcs = [
        "chunked_associative_array.go",
        "config.go",
        "counter.go",
        "counter_float64.go",
        "cpu.go",
        "cpu_disabled.go",
        "cpu_enabled.go",
        "cputime_nop.go",
        "cputime_unix.go",
        "debug.go",
        "disk.go",
        "disk_linux.go",
        "disk_nop.go",
        "ewma.go",
        "gauge.go",
        "gauge_float64.go",
        "gauge_info.go",
        "healthcheck.go",
        "histogram.go",
        "json.go",
        "log.go",
        "meter.go",
        "metrics.go",
        "opentsdb.go",
        "registry.go",
        "resetting_sample.go",
        "resetting_timer.go",
        "runtimehistogram.go",
        "sample.go",
        "sliding_time_window_array_sample.go",
        "syslog.go",
        "timer.go",
        "writer.go",
    ],
    importpath = "github.com/ethereum/go-ethereum/metrics",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_gammazero_deque//:deque",
    ] + select({
        "@rules_go//go/platform:aix_ppc64": [
            "//go-ethereum/log",
            "@com_github_shirou_gopsutil//cpu",
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:android_386": [
            "//go-ethereum/log",
            "@com_github_shirou_gopsutil//cpu",
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:android_amd64": [
            "//go-ethereum/log",
            "@com_github_shirou_gopsutil//cpu",
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:android_arm": [
            "//go-ethereum/log",
            "@com_github_shirou_gopsutil//cpu",
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:android_arm64": [
            "//go-ethereum/log",
            "@com_github_shirou_gopsutil//cpu",
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:darwin_386": [
            "//go-ethereum/log",
            "@com_github_shirou_gopsutil//cpu",
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:darwin_amd64": [
            "//go-ethereum/log",
            "@com_github_shirou_gopsutil//cpu",
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:darwin_arm": [
            "//go-ethereum/log",
            "@com_github_shirou_gopsutil//cpu",
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:darwin_arm64": [
            "//go-ethereum/log",
            "@com_github_shirou_gopsutil//cpu",
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:dragonfly_amd64": [
            "//go-ethereum/log",
            "@com_github_shirou_gopsutil//cpu",
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:freebsd_386": [
            "//go-ethereum/log",
            "@com_github_shirou_gopsutil//cpu",
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:freebsd_amd64": [
            "//go-ethereum/log",
            "@com_github_shirou_gopsutil//cpu",
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:freebsd_arm": [
            "//go-ethereum/log",
            "@com_github_shirou_gopsutil//cpu",
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:freebsd_arm64": [
            "//go-ethereum/log",
            "@com_github_shirou_gopsutil//cpu",
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:illumos_amd64": [
            "//go-ethereum/log",
            "@com_github_shirou_gopsutil//cpu",
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:ios_amd64": [
            "//go-ethereum/log",
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:ios_arm64": [
            "//go-ethereum/log",
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:linux_386": [
            "//go-ethereum/log",
            "@com_github_shirou_gopsutil//cpu",
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:linux_amd64": [
            "//go-ethereum/log",
            "@com_github_shirou_gopsutil//cpu",
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:linux_arm": [
            "//go-ethereum/log",
            "@com_github_shirou_gopsutil//cpu",
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:linux_arm64": [
            "//go-ethereum/log",
            "@com_github_shirou_gopsutil//cpu",
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:linux_mips": [
            "//go-ethereum/log",
            "@com_github_shirou_gopsutil//cpu",
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:linux_mips64": [
            "//go-ethereum/log",
            "@com_github_shirou_gopsutil//cpu",
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:linux_mips64le": [
            "//go-ethereum/log",
            "@com_github_shirou_gopsutil//cpu",
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:linux_mipsle": [
            "//go-ethereum/log",
            "@com_github_shirou_gopsutil//cpu",
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:linux_ppc64": [
            "//go-ethereum/log",
            "@com_github_shirou_gopsutil//cpu",
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:linux_ppc64le": [
            "//go-ethereum/log",
            "@com_github_shirou_gopsutil//cpu",
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:linux_riscv64": [
            "//go-ethereum/log",
            "@com_github_shirou_gopsutil//cpu",
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:linux_s390x": [
            "//go-ethereum/log",
            "@com_github_shirou_gopsutil//cpu",
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:netbsd_386": [
            "//go-ethereum/log",
            "@com_github_shirou_gopsutil//cpu",
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:netbsd_amd64": [
            "//go-ethereum/log",
            "@com_github_shirou_gopsutil//cpu",
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:netbsd_arm": [
            "//go-ethereum/log",
            "@com_github_shirou_gopsutil//cpu",
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:netbsd_arm64": [
            "//go-ethereum/log",
            "@com_github_shirou_gopsutil//cpu",
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:openbsd_386": [
            "//go-ethereum/log",
            "@com_github_shirou_gopsutil//cpu",
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:openbsd_amd64": [
            "//go-ethereum/log",
            "@com_github_shirou_gopsutil//cpu",
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:openbsd_arm": [
            "//go-ethereum/log",
            "@com_github_shirou_gopsutil//cpu",
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:openbsd_arm64": [
            "//go-ethereum/log",
            "@com_github_shirou_gopsutil//cpu",
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:osx_386": [
            "//go-ethereum/log",
            "@com_github_shirou_gopsutil//cpu",
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:osx_amd64": [
            "//go-ethereum/log",
            "@com_github_shirou_gopsutil//cpu",
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:osx_arm": [
            "//go-ethereum/log",
            "@com_github_shirou_gopsutil//cpu",
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:osx_arm64": [
            "//go-ethereum/log",
            "@com_github_shirou_gopsutil//cpu",
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:plan9_386": [
            "//go-ethereum/log",
            "@com_github_shirou_gopsutil//cpu",
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:plan9_amd64": [
            "//go-ethereum/log",
            "@com_github_shirou_gopsutil//cpu",
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:plan9_arm": [
            "//go-ethereum/log",
            "@com_github_shirou_gopsutil//cpu",
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:qnx_386": [
            "//go-ethereum/log",
            "@com_github_shirou_gopsutil//cpu",
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:qnx_amd64": [
            "//go-ethereum/log",
            "@com_github_shirou_gopsutil//cpu",
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:qnx_arm": [
            "//go-ethereum/log",
            "@com_github_shirou_gopsutil//cpu",
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:qnx_arm64": [
            "//go-ethereum/log",
            "@com_github_shirou_gopsutil//cpu",
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:solaris_amd64": [
            "//go-ethereum/log",
            "@com_github_shirou_gopsutil//cpu",
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:windows_386": [
            "//go-ethereum/log",
            "@com_github_shirou_gopsutil//cpu",
        ],
        "@rules_go//go/platform:windows_amd64": [
            "//go-ethereum/log",
            "@com_github_shirou_gopsutil//cpu",
        ],
        "@rules_go//go/platform:windows_arm": [
            "//go-ethereum/log",
            "@com_github_shirou_gopsutil//cpu",
        ],
        "@rules_go//go/platform:windows_arm64": [
            "//go-ethereum/log",
            "@com_github_shirou_gopsutil//cpu",
        ],
        "//conditions:default": [],
    }),
)

go_test(
    name = "metrics_test",
    srcs = [
        "chunked_associative_array_test.go",
        "counter_float_64_test.go",
        "counter_test.go",
        "debug_test.go",
        "ewma_test.go",
        "gauge_float64_test.go",
        "gauge_info_test.go",
        "gauge_test.go",
        "histogram_test.go",
        "init_test.go",
        "json_test.go",
        "meter_test.go",
        "metrics_test.go",
        "opentsdb_test.go",
        "registry_test.go",
        "resetting_timer_test.go",
        "runtimehistogram_test.go",
        "sample_test.go",
        "sliding_time_window_expiry_test.go",
        "timer_test.go",
        "writer_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":metrics"],
)
