load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "miner",
    srcs = [
        "miner.go",
        "ordering.go",
        "payload_building.go",
        "pending.go",
        "worker.go",
    ],
    importpath = "github.com/ethereum/go-ethereum/miner",
    visibility = ["//visibility:public"],
    deps = [
        "//go-ethereum/beacon/engine",
        "//go-ethereum/common",
        "//go-ethereum/common/hexutil",
        "//go-ethereum/consensus",
        "//go-ethereum/consensus/misc/eip1559",
        "//go-ethereum/consensus/misc/eip4844",
        "//go-ethereum/core",
        "//go-ethereum/core/state",
        "//go-ethereum/core/stateless",
        "//go-ethereum/core/txpool",
        "//go-ethereum/core/types",
        "//go-ethereum/core/vm",
        "//go-ethereum/log",
        "//go-ethereum/params",
        "//go-ethereum/rlp",
        "@com_github_holiman_uint256//:uint256",
    ],
)

go_test(
    name = "miner_test",
    srcs = [
        "miner_test.go",
        "ordering_test.go",
        "payload_building_test.go",
    ],
    embed = [":miner"],
    deps = [
        "//go-ethereum/beacon/engine",
        "//go-ethereum/common",
        "//go-ethereum/consensus",
        "//go-ethereum/consensus/clique",
        "//go-ethereum/consensus/ethash",
        "//go-ethereum/core",
        "//go-ethereum/core/rawdb",
        "//go-ethereum/core/state",
        "//go-ethereum/core/txpool",
        "//go-ethereum/core/txpool/legacypool",
        "//go-ethereum/core/types",
        "//go-ethereum/crypto",
        "//go-ethereum/ethdb",
        "//go-ethereum/event",
        "//go-ethereum/params",
        "//go-ethereum/trie",
        "//go-ethereum/triedb",
        "@com_github_holiman_uint256//:uint256",
    ],
)
