load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "node",
    srcs = [
        "api.go",
        "config.go",
        "database.go",
        "defaults.go",
        "doc.go",
        "endpoints.go",
        "errors.go",
        "jwt_auth.go",
        "jwt_handler.go",
        "lifecycle.go",
        "node.go",
        "rpcstack.go",
    ],
    importpath = "github.com/ethereum/go-ethereum/node",
    visibility = ["//visibility:public"],
    deps = [
        "//go-ethereum/accounts",
        "//go-ethereum/common",
        "//go-ethereum/common/hexutil",
        "//go-ethereum/core/rawdb",
        "//go-ethereum/crypto",
        "//go-ethereum/ethdb",
        "//go-ethereum/ethdb/leveldb",
        "//go-ethereum/ethdb/memorydb",
        "//go-ethereum/ethdb/pebble",
        "//go-ethereum/event",
        "//go-ethereum/internal/debug",
        "//go-ethereum/log",
        "//go-ethereum/p2p",
        "//go-ethereum/p2p/discover",
        "//go-ethereum/p2p/enode",
        "//go-ethereum/p2p/nat",
        "//go-ethereum/rpc",
        "@com_github_gofrs_flock//:flock",
        "@com_github_golang_jwt_jwt_v4//:jwt",
        "@com_github_rs_cors//:cors",
    ],
)

go_test(
    name = "node_test",
    srcs = [
        "api_test.go",
        "config_test.go",
        "node_auth_test.go",
        "node_example_test.go",
        "node_test.go",
        "rpcstack_test.go",
        "utils_test.go",
    ],
    embed = [":node"],
    deps = [
        "//go-ethereum/common/hexutil",
        "//go-ethereum/crypto",
        "//go-ethereum/ethdb",
        "//go-ethereum/internal/testlog",
        "//go-ethereum/log",
        "//go-ethereum/p2p",
        "//go-ethereum/rpc",
        "@com_github_golang_jwt_jwt_v4//:jwt",
        "@com_github_gorilla_websocket//:websocket",
        "@com_github_stretchr_testify//assert",
    ],
)
